--- a/src/pages/ticket/ticket.css
+++ b/src/pages/ticket/ticket.css
@@ -140,3 +140,21 @@
       margin-top: 30px;
       cursor: pointer;
   }
+
+.ticketStatusActive{
+    border: none;
+    border-radius: 10px;
+    padding: 5px 5px;
+    background-color: #3ad847;
+    color: white;
+    margin-right: 20px;
+}
+
+.ticketStatusInactive{
+    border: none;
+    border-radius: 10px;
+    padding: 5px 5px;
+    background-color: #df2727;
+    color: white;
+    margin-right: 20px;
+}
