--- a/src/pages/user/userList.css
+++ b/src/pages/user/userList.css
@@ -219,3 +219,21 @@
     margin-top: 30px;
     cursor: pointer;
 }
+
+.userStatusActive{
+    border: none;
+    border-radius: 10px;
+    padding: 5px 5px;
+    background-color: #3ad847;
+    color: white;
+    margin-right: 20px;
+}
+
+.userStatusInactive{
+    border: none;
+    border-radius: 10px;
+    padding: 5px 5px;
+    background-color: #df2727;
+    color: white;
+    margin-right: 20px;
+}
